Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignTextObjBoolean.quorum
Text t = cast(Text, true)